--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="src/assets/bootstrap-5.3.7-dist/css/bootstrap.min.css">
+  <link rel="shortcut icon" href="/public/favicon.ico" type="image/x-icon">
   <title>AI Powered Placement Hub</title>
 </head>
 
 <body>
   <main id="root"></main>
-  <script>
+  <!-- <script>
     function updateTheme() {
       const prefersDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
       const currentTheme = document.documentElement.getAttribute('data-bs-theme');
@@ -21,7 +22,7 @@
     }
     updateTheme();
     window.matchMedia('(prefers-color-scheme: dark)').addEventListener('change', updateTheme);
-  </script>
+  </script> -->
   <script type="module" src="./src/main.jsx"></script>
 </body>
 
