--- a/index.html
+++ b/index.html
@@ -5,24 +5,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="src/assets/bootstrap-5.3.7-dist/css/bootstrap.min.css">
-  <link rel="shortcut icon" href="/public/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
   <title>AI Powered Placement Hub</title>
 </head>
 
 <body>
   <main id="root"></main>
-  <!-- <script>
-    function updateTheme() {
-      const prefersDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
-      const currentTheme = document.documentElement.getAttribute('data-bs-theme');
-      const newTheme = prefersDark ? 'dark' : 'light';
-      if (currentTheme !== newTheme) {
-        document.documentElement.setAttribute('data-bs-theme', newTheme);
-      }
-    }
-    updateTheme();
-    window.matchMedia('(prefers-color-scheme: dark)').addEventListener('change', updateTheme);
-  </script> -->
   <script type="module" src="./src/main.jsx"></script>
 </body>
 
